--- a/codigo-fonte/src/index.css
+++ b/codigo-fonte/src/index.css
@@ -3,19 +3,64 @@
 
 .menu{
     background-color: var(--fundo-principal);
-    border-bottom: solid 1px;
+    border-bottom: solid 1px grey;
     display: flex;
     height: 21vh;
     width: 100%;
 }
 
 .menu__logo{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
     height: 100%;
     width: 15vw;
 }
 
+.menu__logo img{
+    cursor: pointer;
+    object-fit: cover;
+    width: 9rem;
+}
+
+.menu__logo p{
+    cursor: pointer;
+}
+
 .menu__nav{
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    width: 85vw;
+}
+
+.menu__ul{
+    align-items: end;
     display: flex;
     height: 100%;
-    width: 85vw;
+    justify-content: space-around;
+    width: 70vw;
+}
+
+.menu__li{
+    cursor: pointer;
+    margin-bottom: 3rem;
+}
+
+.menu__login{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    height: 65%;
+    justify-content: space-around;
+}
+
+.login__li{
+    align-content: center;
+    background-color: var(--fundo-secundario);
+    border-radius: 6em;
+    cursor: pointer;
+    height: 1.5rem;
+    padding: 0 .5rem 0 .5rem;
 }
