--- a/codigo-fonte/src/variaveis.css
+++ b/codigo-fonte/src/variaveis.css
@@ -1,4 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 :root{
+    /*cores*/
     --fundo-principal: white;
     --fundo-secundario: rgb(231, 226, 226);
+
+    /*fontes*/
+
+    --fonte-logo: "Quicksand", sans-serif;
+    --fonte-principal: "Roboto", sans-serif;
 }
