--- a/codigo-fonte/src/usuario/usuario.css
+++ b/codigo-fonte/src/usuario/usuario.css
@@ -104,8 +104,8 @@ h1{
 }
 
 .submenu li a:hover{
-    background-color: #555;
-    color: white;
+    background-color: #f6f7f9;
+    color: black;
 }
 
 
