--- a/codigo-fonte/src/usuario/usuario.css
+++ b/codigo-fonte/src/usuario/usuario.css
@@ -108,6 +108,15 @@ h1{
     color: black;
 }
 
+.active{
+    border-left: 4px solid black;
+    border-right: 4px solid black;
+    border-radius: 20px;
+    padding-left: 20px;
+    background-color: #f6f7f9;
+}
+
+
 
 .content{
     max-width: 900px;
