--- a/codigo-fonte/src/Planos/planos.css
+++ b/codigo-fonte/src/Planos/planos.css
@@ -1,17 +1,65 @@
+header{
+    width: 100%;
+    height: 70px;
+    background-color: #fffafa;
+    display:flex;
+    padding: 10px;
+    justify-content: space-between;
+    box-shadow: 0px 2px 0px #d0d7de;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.menu{
+    list-style: none;
+    display: flex;
+}
+
+.menu li a{
+    color:#020202;
+    display: block;
+    text-decoration: none;
+    padding: 10px 20px 10px 20px;
+    border-radius: 10px;
+    margin-left: 10px;
+}
+
+.menu li a:hover{
+    color:#fff;
+    display: block;
+    text-decoration: none;
+    margin-left: 10px;
+    background-color: #333;
+}
+
+.logo{
+    width: 40px;
+    height: 40px;
+    border-radius: 10px;
+    background-color: #ccc;
+
+}
+
 .container {
 display: flex;
-justify-content: center;    
+justify-content: space-between;
+padding: 10px;
+
+
 }
+
 .card{
-    width: 550px;
-    height: 450px;
+    width: 350px;
+    height: 250px;
     border-radius: 15px;
     background-color: rgba(185, 180, 180, 0.562);
+    
 }
 .text-main{
 text-align: center;
 font-family: Verdana, Geneva, Tahoma, sans-serif
 }
+
 p{color: black;
 font-size: 12px;
 font-family: Arial, Helvetica, sans-serif;
