--- a/codigo-fonte/sobre.css
+++ b/codigo-fonte/sobre.css
@@ -9,6 +9,19 @@
     width: 100%;
 }
 
+.texto h3{
+    font-family: var(--fonte-principal);
+    font-size: 2rem;
+    margin: 2rem;
+}
+
 .texto div{
+    border: solid 1px grey;
+    border-radius: 2rem;
+    padding: 2rem;
     width: 70%;
+}
+
+.texto p{
+    font-family: var(--fonte-secundaria);
 }
