--- a/codigo-fonte/variaveis.css
+++ b/codigo-fonte/variaveis.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root{
     /*cores*/
@@ -9,4 +10,5 @@
 
     --fonte-logo: "Quicksand", sans-serif;
     --fonte-principal: "Roboto", sans-serif;
+    --fonte-secundaria: "Raleway", sans-serif;
 }
