--- a/codigo-fonte/sobre.css
+++ b/codigo-fonte/sobre.css
@@ -6,13 +6,14 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+    padding-top: 21vh;
     width: 100%;
 }
 
 .texto h3{
     font-family: var(--fonte-principal);
     font-size: 2rem;
-    margin: 2rem;
+    margin: 2rem 2rem 2rem 2rem;
 }
 
 .texto div{
