--- a/codigo-fonte/src/Planos/planos.css
+++ b/codigo-fonte/src/Planos/planos.css
@@ -1,3 +1,17 @@
+*{
+    margin: 0;
+    padding: 0;
+    font-family: arial, Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+body{
+    background: white;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #434343;
+}
 header{
     width: 100%;
     height: 70px;
@@ -8,6 +22,9 @@ header{
     box-shadow: 0px 2px 0px #d0d7de;
     align-items: center;
     flex-wrap: wrap;
+    position: fixed;
+    top: 0;
+    
 }
 
 .menu{
@@ -40,27 +57,66 @@ header{
 
 }
 
-.container {
-display: flex;
-justify-content: space-between;
-padding: 10px;
-
+main.cards{
+    display: flex;
+    padding: 32px;
+}
+main.cards section.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background: rgb(199, 199, 199);
+    padding: 1rem 1.5px;
+    max-height: 400px;
+    height: 355px;
+    margin-left: 32px;
+    box-shadow: 20px 20px  50px -30px black;
+    border-radius: 12px;
 
 }
-
-.card{
-    width: 350px;
-    height: 250px;
-    border-radius: 15px;
-    background-color: rgba(185, 180, 180, 0.562);
-    
-}
-.text-main{
-text-align: center;
-font-family: Verdana, Geneva, Tahoma, sans-serif
+main.cards section.card:first-child{
+    margin-left: 0%;
 }
 
-p{color: black;
-font-size: 12px;
-font-family: Arial, Helvetica, sans-serif;
+main.cards section.card .icon{
+width: 64px;
+height: 64px
+}
+main.cards section.card img{
+    width: 100%;
+}
+main.cards section.card h3{
+    font-size: 100%;
+    margin: 16px 0;
+}
+main.cards section.card span {
+    font-weight: 300;
+    max-height: 240px;
+    font-size: 85%;
+    margin-right: 0.5rem;
+    margin-left: 0.5rem;
+    margin-bottom: 16px;
+}
+main.cards section.card button{
+    padding: 0.3rem 0.7rem;
+    text-transform: uppercase;
+    border-radius: 32px;
+    border: 0;
+    cursor: pointer;
+    font-size: 76%;
+    font-weight: 455;
+    background: linear-gradient(to right, #e6c619,#fff1ba);
+}
+@media screen and (max-width: 720px){
+    main.cards {
+        flex-direction: column;
+    }
+    main.cards section.card{
+        margin-left: 0;
+        margin-bottom: 32px;
+    }
+    main.cards selection.card:last-child {
+        margin-bottom: 0;
+    }
 }
