--- a/codigo-fonte/src/usuario/usuario.css
+++ b/codigo-fonte/src/usuario/usuario.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Arial', cursive;
+    font-family: 'apple-system', sans-serif;
 }
 body {
     width: 100%;
@@ -53,25 +53,24 @@ header{
 
 }
 
+.logo img{
+    width: 50px;
+    height: 40px;
+}
+
 .profile-picture{
+    background-image: url(../imagens/perfil-40px.png);
     width: 40px;
     height: 40px;
     border-radius: 20px;
-    background-color: #ccc;
-}
-
-h1{
-    color:#fff;
-    text-align: center;
-    margin-top: 20px;
 }
 
 .container{
     border: 0px solid #fff;
-    max-width: 1200px;
+    max-width: 1500px;
     margin: 0 auto;
     display: grid;
-    padding: 0px 20px 0px 20px;
+    padding: 60px 20px 0px 20px;
     justify-content: center;
     grid-gap: 20px;
     grid-template-areas:
@@ -83,6 +82,7 @@ h1{
 .sidenav{
     width: 350px;
     height: 100%;
+    padding: 0px 24px 0px 0px;
     box-shadow: 0px 2px 0px #d0d7de;
     background-color: white;
     border-radius: 0px;
@@ -93,41 +93,73 @@ h1{
     list-style-type: none;
     margin: 0;
     padding: 0;
-    text-align: center;
-
+    text-align: start;
 }
 
 .submenu li a{
     display: block;
     padding: 8px 16px;
     text-decoration: none;
+    font: arial black;
+    font-weight: 550;
+    
 }
 
 .submenu li a:hover{
-    background-color: #f6f7f9;
+    background-color: #d0d7de;
     color: black;
+    border-radius: 4px;
+}
+
+.icon{
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    margin-right: 10px;
+
 }
 
 .active{
     border-left: 4px solid black;
-    border-right: 4px solid black;
-    border-radius: 20px;
-    background-color: #f6f7f9;
+    border-radius: 4px;
+    background-color: #d0d7de;
 }
-
-
 
 .content{
     max-width: 900px;
-    min-width: 350px;
+    min-width: 700px;
     height: 900px;
-    background-color: aqua;
+    padding: 0px 16px;
+    background-color: white;
     border-radius: 20px;
     grid-area: "content";
     grid-column: content;
     grid-row: content;
 
 }
+
+.titulo{
+    width: 100%;
+    padding-bottom: 10px;
+    box-shadow: 0px 2px 0px #d0d7de;
+
+}
+
+.form dt{
+    background-color: none;
+    margin: 10px 0px;
+    
+}
+
+.textbox{
+    padding-top: 10px;
+    padding-left: 5px;
+    padding-bottom: 10px;
+    background-color: lightgray;
+    border-radius: 15px;
+    
+}
+
 
 @media (max-width: 740px){
     .container{
