--- a/codigo-fonte/src/Planos/planos.css
+++ b/codigo-fonte/src/Planos/planos.css
@@ -7,9 +7,6 @@ body{
     background: white;
     height: 100vh;
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     color: #434343;
 }
 header{
@@ -20,13 +17,10 @@ header{
     padding: 10px;
     justify-content: space-between;
     box-shadow: 0px 2px 0px #d0d7de;
+
     align-items: center;
     flex-wrap: wrap;
-    position: fixed;
-    top: 0;
-    
 }
-
 .menu{
     list-style: none;
     display: flex;
@@ -57,9 +51,16 @@ header{
 
 }
 
+.logo img{
+    width: 50px;
+    height: 40px;
+}
+
 .cards{
     display: flex;
     padding: 32px;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 .card {
     display: flex;
@@ -73,12 +74,10 @@ header{
     margin-left: 32px;
     box-shadow: 20px 20px  50px -30px black;
     border-radius: 12px;
-
 }
 .card:first-child{
     margin-left: 0%;
 }
-
 .icon{
 width: 64px;
 height: 64px
@@ -102,11 +101,31 @@ button{
     padding: 0.3rem 0.7rem;
     text-transform: uppercase;
     border-radius: 32px;
-    border: 0;
+    border: none;
+    outline: none;
+    transition: 0.4s;
     cursor: pointer;
     font-size: 76%;
     font-weight: 455;
+    background-color: #fff1ba;
+}
+button:hover{
     background: linear-gradient(to right, #e6c619,#fff1ba);
+}
+.faq{
+    height: 
+}
+ details summary{
+    background-color: rgb(128, 190, 219);
+    padding: 2%;
+    border-bottom:2px solid black ;
+    color: #020202;
+    
+}
+section p{
+    background-color: #b1b1b1;
+    padding: 2%;
+
 }
 @media screen and (max-width: 720px){
     .cards {
@@ -116,7 +135,13 @@ button{
         margin-left: 0;
         margin-bottom: 32px;
     }
-    .cards selection.card:last-child {
+    .cards section.card:last-child {
         margin-bottom: 0;
     }
+}
+footer{
+    margin-top: 15px;
+    width: 100%;
+    height: 100px;
+    background-color:
 }
