--- a/codigo-fonte/src/Dashboard/dashboard.css
+++ b/codigo-fonte/src/Dashboard/dashboard.css
@@ -13,9 +13,58 @@ body {
 
 header{
     width: 100%;
-    height: 6cqmax;
-    background-color: aquamarine;
+    height: 70px;
+    background-color: #fffafa;
+    display:flex;
+    padding: 10px;
+    justify-content: space-between;
+    box-shadow: 0px 2px 0px #d0d7de;
+    align-items: center;
+    flex-wrap: wrap;
 }
+
+.menu{
+    list-style: none;
+    display: flex;
+}
+
+.menu li a{
+    color:#020202;
+    display: block;
+    text-decoration: none;
+    padding: 10px 20px 10px 20px;
+    border-radius: 10px;
+    margin-left: 10px;
+}
+
+.menu li a:hover{
+    color:#fff;
+    display: block;
+    text-decoration: none;
+    margin-left: 10px;
+    background-color: #333;
+}
+
+.logo{
+    width: 40px;
+    height: 40px;
+    border-radius: 10px;
+    background-color: #ccc;
+
+}
+
+.logo img{
+    width: 50px;
+    height: 40px;
+}
+
+.profile-picture{
+    background-image: url(../imagens/perfil-40px.png);
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+}
+
 
 .dashboard{
     display: grid;
@@ -35,8 +84,8 @@ header{
 }
 
 .workarea{
-    background-color: blue
-    width: 100%;
+    background-color: blue;
+    width:100%;
     height: 100%;
     grid-area: workarea;
 
