--- a/codigo-fonte/src/Dashboard/dashboard.css
+++ b/codigo-fonte/src/Dashboard/dashboard.css
@@ -78,9 +78,20 @@ header{
 
 .leftmenu{
     background-color: black;
-    width: 100%;
+    width: 400px;
     height: 100%;
     grid-area: leftmenu;
+    padding-top: 30px;
+    display: flex;
+    place-content: center;
+    
+}
+
+.fotodispositivo{
+    width: 150px;
+    height: 150px;
+    border-radius: 10px;
+    background-color: white;
 }
 
 .workarea{
@@ -88,5 +99,5 @@ header{
     width:100%;
     height: 100%;
     grid-area: workarea;
-
+    display: flex;
 }
