--- a/codigo-fonte/src/Dashboard/dashboard.css
+++ b/codigo-fonte/src/Dashboard/dashboard.css
@@ -1,3 +1,5 @@
+@import url("../../variaveis.css");
+
 *{
     padding: 0;
     margin: 0;
@@ -139,9 +141,87 @@ header{
 
 
 .workarea{
-    background-color: rgba(1, 1, 73, 0.993);
+    background-color: var(--fundo-principal);
     width:100%;
     height: 100%;
     grid-area: workarea;
     display: flex;
 }
+
+.dispositivo{
+    background-color: var(--fundo-secundario);
+    border-radius: 10px;
+    height: 30vh;
+    margin: 0 2rem;
+    width: 27vw;
+}
+
+.dispositivo__titulo h3{
+    color: var(--icones-principais);
+    font-family: var(--fonte-principal);
+}
+
+
+.dispositivo__titulo{
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem 1rem;
+    width: 100%;
+}
+
+.dispositivo__titulo i{
+    color: var(--icones-principais);
+    cursor: pointer;
+    font-size: 1.3rem;
+    transition-duration: .3s;
+    transition-timing-function: linear;
+    
+}
+
+.dispositivo__titulo i:hover{
+    transform: translate(0, 0px);
+}
+
+.tooltip{
+   align-content: center;
+    background-color: rgb(173, 173, 173);
+    border-radius: 5px;
+    color: white;
+    font-size: 1rem;
+    font-weight: 100;
+    height: 1.5rem;
+    padding: 1rem;
+    position: absolute;
+    visibility: hidden;
+    top: -40px;
+    left: -54px;
+    transition-duration: .5s;
+    opacity: 0;
+}
+
+.dispositivo__titulo i:hover .tooltip{
+    align-content: center;
+    background-color: rgb(173, 173, 173);
+    border-radius: 5px;
+    color: white;
+    font-size: 1rem;
+    font-weight: 100;
+    height: 1.5rem;
+    padding: 1rem;
+    position: absolute;
+    visibility: visible;
+    top: -40px;
+    left: -54px;
+    transition-property: opacity;
+    transition-duration: .5s;
+    transition-delay: 1.5s;
+    opacity: 80%;
+}
+
+.dispositivo__info{
+    display: flex;
+    justify-content: space-between;
+    margin: .5rem 1rem;
+    width: 30%;
+}
+
