--- a/codigo-fonte/src/Dashboard/dashboard.css
+++ b/codigo-fonte/src/Dashboard/dashboard.css
@@ -146,14 +146,16 @@ header{
     height: 100%;
     grid-area: workarea;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .dispositivo{
     background-color: var(--fundo-secundario);
     border-radius: 10px;
-    height: 30vh;
+    height: 25vh;
     margin: 0 2rem;
-    width: 27vw;
+    width: 18vw;
 }
 
 .dispositivo__titulo h3{
@@ -205,7 +207,7 @@ header{
     border-radius: 5px;
     color: white;
     font-size: 1rem;
-    font-weight: 100;
+    font-weight: 100;   
     height: 1.5rem;
     padding: 1rem;
     position: absolute;
@@ -221,7 +223,8 @@ header{
 .dispositivo__info{
     display: flex;
     justify-content: space-between;
-    margin: .5rem 1rem;
-    width: 30%;
+    margin: .5rem .5rem;
+    padding-right: 3rem;
+    width: 50%;
 }
 
