--- a/codigo-fonte/variaveis.css
+++ b/codigo-fonte/variaveis.css
@@ -5,6 +5,7 @@
     /*cores*/
     --fundo-principal: white;
     --fundo-secundario: rgb(231, 226, 226);
+    --fundo-dispositivo: #c0c0c0;
 
     /*fontes*/
 
