--- a/codigo-fonte/src/Dashboard/dashboard.css
+++ b/codigo-fonte/src/Dashboard/dashboard.css
@@ -16,7 +16,7 @@ body {
 header{
     width: 100%;
     height: 70px;
-    background-color: #fffafa;
+    background-color: #565655;
     display:flex;
     padding: 10px;
     justify-content: space-between;
@@ -80,39 +80,46 @@ header{
 
 .leftmenu{
     display: grid;
-    background-color: black;
+    background-color: #d9dadb;
     width: 100%;
     height: 100%;
+    border-right: 2px solid #989fa7;
     grid-area: leftmenu;
-    grid-template-columns: 1fr;
-    grid-template-rows: min-content;
+    grid-template-columns: 100%;
+    grid-auto-rows:auto;
     grid-template-areas:
     "areanavbar"
     "areadispositivo"
     "areanome"
-    "areastatus"
     "arealocal"
-    "areadescricao";
+    "local"
+    "areadescricao"
+    "areastatus";
     padding-top: 0;
     justify-content: center;
     
 }
 
 .areanavbar{
-    background-color: purple;
+    background-color: #d9dadb;
     width: 100%;
     height: 50px;
     grid-area: areanavbar;
+    margin-bottom: 20px;
+    box-shadow: 0px 2px 0px #989fa7;
     
 }
 
 .areadispositivo{
     width: 100%;
-    height: 200px;
+    height: min-content;
     grid-area: areadispositivo;
     place-content: center;
     display: grid;
+    grid-template-columns:min-content;
+    margin-bottom: 15px;
 }
+
 .fotodispositivo{
     width: 120px;
     height: 120px;
@@ -123,34 +130,87 @@ header{
 }
 
 .areanome{
-    width: 465px;
-    height: 120px;
-    padding-left: 190px;
+    width: 100%;
+    height: min-content;
+    grid-area: areanome;
+    place-content: top;
+    justify-content: center;
+    display: grid;
+    grid-template-rows: min-content;
+    margin-bottom: 20px;
 }
 
-.nome-texto{
-    color: black;
-    grid-area: areanome;
-    width: 100px;
-    height: 50px;
+.nometexto{
+    width: 200px;
+    height: 30px;
+    text-align: center;
+    background-color: #fffafa;
+    border-radius: 5px;
+}
+
+.arealocal{
+    width: 100%;
     display: grid;
-    padding: 15px 0px 0px 0px;
+    grid-area: arealocal;
+    place-content: center;
+    margin-bottom: 5px;
+
+}
+
+.arealocalTitulo{
+    color: black;
+    text-align: start;
+    font-size: 17px;
+}
+
+.local{
+    display: grid;
+    grid-area: local;
+    place-content: center;
+    margin-bottom: 150px;
+}
+
+.local select{
+    width: 200px;
     border-radius: 10px;
 }
-input{
-    width: 100px;
-    height: 30px;
+
+.comodos{
+    width: 80x;
+}
+
+.opcoes{
+    width: 100%;
     text-align: center;
 }
 
+.areadescricao{
+    width: 100%;
+    display: grid;
+    grid-area: areadescricao;
+    place-content: center;
+    margin-bottom: 150px;
+
+}
+
+.descricao{
+    border-radius: 5px;
+    height: 100px;
+}
+
 .areastatus{
-    width: 465px;
-    padding-left: 150px;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-area: areastatus;
+    place-content: center;
+    background-color: #2c2c2c;
+
 }
 
 input.status{
     width: 150px;
-    height: 75px;
+    height: 74px;
     background-color: #d0d7de;
     border-radius: 14px;
     
@@ -159,7 +219,6 @@ label{
     position: relative;
     width: px;
     height: 75px;
-    background-color: grey;
     border-radius: 10px;
 }
 label span{
@@ -168,7 +227,7 @@ label span{
     left: 0;
     width: 75px;
     height: 75px;
-    background-color: rgb(92, 92, 92);
+    background-color: white;
     border: 6px solid black;
     border-radius: 14px;
     cursor: pointer;
@@ -178,14 +237,13 @@ label span{
     align-items: center;
 }
 label span ion-icon {
-    color: rgba(148, 54, 54);
+    color: red;
     font-size: 1.5rem;
     transition: 0.5s;
 }
 label input:checked ~ span ion-icon{
-    color: rgb(19, 202, 43, 0.25);
+    color: green;
     filter: drop-shadow(0 0 5px #fff)
-            drop-shadow(0 0 10px #fff)
             drop-shadow(0 0 15px #fff);
 }
 label input{
