--- a/codigo-fonte/src/Dashboard/dashboard.css
+++ b/codigo-fonte/src/Dashboard/dashboard.css
@@ -86,13 +86,12 @@ header{
     border-right: 2px solid #989fa7;
     grid-area: leftmenu;
     grid-template-columns: 100%;
-    grid-auto-rows:auto;
+    grid-template-rows: max-content;
     grid-template-areas:
     "areanavbar"
     "areadispositivo"
     "areanome"
     "arealocal"
-    "local"
     "areadescricao"
     "areastatus";
     padding-top: 0;
@@ -137,12 +136,17 @@ header{
     justify-content: center;
     display: grid;
     grid-template-rows: min-content;
-    margin-bottom: 20px;
+}
+
+.areanome h2{
+    text-align: center;
+    margin-bottom: 3px;
+    font-size: small;
 }
 
 .nometexto{
-    width: 200px;
-    height: 30px;
+    width: 100%;
+    height: 25px;
     text-align: center;
     background-color: #fffafa;
     border-radius: 5px;
@@ -150,38 +154,28 @@ header{
 
 .arealocal{
     width: 100%;
+    height: min-content;
     display: grid;
     grid-area: arealocal;
-    place-content: center;
-    margin-bottom: 5px;
+    grid-template-rows: min-content;
+    place-content: top;
+    justify-content: center;;
 
 }
 
-.arealocalTitulo{
-    color: black;
-    text-align: start;
-    font-size: 17px;
-}
-
-.local{
-    display: grid;
-    grid-area: local;
-    place-content: center;
-    margin-bottom: 150px;
-}
-
-.local select{
-    width: 200px;
-    border-radius: 10px;
-}
-
-.comodos{
-    width: 80x;
-}
-
-.opcoes{
-    width: 100%;
+.arealocal h2{
     text-align: center;
+    margin-left: 7px;
+    margin-bottom: 3px;
+    font-size: small;
+}
+
+.arealocal select{
+    width: 178px;
+    height: 25px;
+    text-align: center;
+    background-color: #fffafa;
+    border-radius: 5px;
 }
 
 .areadescricao{
