--- a/codigo-fonte/src/Dashboard/dashboard.css
+++ b/codigo-fonte/src/Dashboard/dashboard.css
@@ -91,7 +91,7 @@ header{
     border-right: 2px solid #989fa7;
     grid-area: leftmenu;
     grid-template-columns: 100%;
-    grid-template-rows: max-content;
+    grid-template-rows: min-content min-content min-content min-content min-content 1fr;
     grid-template-areas:
     "areanavbar"
     "areadispositivo"
@@ -188,13 +188,20 @@ header{
     display: grid;
     grid-area: areadescricao;
     place-content: center;
-    margin-bottom: 150px;
 
 }
 
+.areadescricao h2{
+    text-align: center;
+    margin-bottom: 3px;
+    font-size: small;
+}
+
 .descricao{
-    border-radius: 5px;
+    border-radius: 4px;
     height: 100px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .areastatus{
