--- a/codigo-fonte/src/Dashboard/dashboard.css
+++ b/codigo-fonte/src/Dashboard/dashboard.css
@@ -9,13 +9,13 @@
 
 body {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: white;
 }
 
 header{
     width: 100%;
-    height: 80px;
+    height: fit-content;
     background-color: #565656;
     display:flex;
     padding: 10px;
@@ -29,7 +29,7 @@ header{
     list-style: none;
     display: flex;
     font-size: 14px;
-    text-align: center;
+    text-align: center;;
 }
 
 .menu li a{
@@ -50,13 +50,14 @@ header{
 }
 
 .logo{
+
     border-radius: 10px;
     background-color: #c5c5c5;
 }
 
 .logo img{
-    width: 45px;
-    height: 45px;
+    width: 50px;
+    height: 50px;
 }
 .menu img{
     width: 40px;
@@ -66,6 +67,7 @@ header{
 }
 
 .profile-picture{
+    margin-top: 5px;
     background-image: url(../imagens/perfil-40px.png);
     width: 40px;
     height: 40px;
@@ -75,7 +77,7 @@ header{
 
 .dashboard{
     display: grid;
-    grid-template-columns: 20% 80%;
+    grid-template-columns: 15% 85%;
     grid-template-rows: auto;
     background-color: aqua;
     grid-template-areas:"leftmenu workarea" ;
@@ -91,16 +93,11 @@ header{
     border-right: 2px solid #989fa7;
     grid-area: leftmenu;
     grid-template-columns: 100%;
-    grid-template-rows: min-content min-content min-content min-content min-content 1fr;
+    grid-template-rows: min-content;
     grid-template-areas:
     "areanavbar"
-    "areadispositivo"
-    "areanome"
-    "arealocal"
-    "areadescricao"
-    "areastatus";
-    padding-top: 0;
-    justify-content: center;
+    "areainfo"
+    "areastatus"
     
 }
 
@@ -114,94 +111,32 @@ header{
     
 }
 
-.areadispositivo{
+.areainfo{
     width: 100%;
     height: min-content;
-    grid-area: areadispositivo;
-    place-content: center;
-    display: grid;
-    grid-template-columns:min-content;
+    grid-area: areainfo;
+    text-align: center;
     margin-bottom: 15px;
+    place-content: start;
+}
+
+.areainfo h2{
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    font-size: small;
 }
 
 .fotodispositivo{
     width: 120px;
     height: 120px;
     border-radius: 10px;
-    background-color: white;
-    padding: 10px 10px 10px 10px;
-    
-}
-
-.areanome{
-    width: 100%;
-    height: min-content;
-    grid-area: areanome;
-    place-content: top;
+    display: inline-block;
+    grid-template-columns: 100%;
+    align-content: center;
     justify-content: center;
-    display: grid;
-    grid-template-rows: min-content;
-}
-
-.areanome h2{
-    text-align: center;
-    margin-bottom: 3px;
-    font-size: small;
-}
-
-.nometexto{
-    width: 100%;
-    height: 25px;
-    text-align: center;
-    background-color: #fffafa;
-    border-radius: 5px;
-}
-
-.arealocal{
-    width: 100%;
-    height: min-content;
-    display: grid;
-    grid-area: arealocal;
-    grid-template-rows: min-content;
-    place-content: top;
-    justify-content: center;;
-
-}
-
-.arealocal h2{
-    text-align: center;
-    margin-left: 7px;
-    margin-bottom: 3px;
-    font-size: small;
-}
-
-.arealocal select{
-    width: 178px;
-    height: 25px;
-    text-align: center;
-    background-color: #fffafa;
-    border-radius: 5px;
-}
-
-.areadescricao{
-    width: 100%;
-    display: grid;
-    grid-area: areadescricao;
-    place-content: center;
-
-}
-
-.areadescricao h2{
-    text-align: center;
-    margin-bottom: 3px;
-    font-size: small;
-}
-
-.descricao{
-    border-radius: 4px;
-    height: 100px;
-    margin-left: 5px;
-    margin-right: 5px;
+    background-color: white;
+    
 }
 
 .areastatus{
@@ -209,9 +144,17 @@ header{
     height: 100%;
     display: grid;
     grid-area: areastatus;
-    place-content: center;
-    background-color: #2c2c2c;
+    place-items: end;
+    grid-template-columns: 100%;
 
+}
+
+.status{
+    background-color: #2c2c2c;
+    text-align: center;
+    width: 100%;
+    height: fit-content;
+    border-top: #2c2c2c solid 5px;
 }
 
 input.status{
@@ -258,14 +201,6 @@ label input{
 }
 label input:checked ~ span{
     left:75px;
-}
-
-.arealocal{
-
-}
-
-.areadescricao{
-    
 }
 
 .workarea{
