--- a/codigo-fonte/src/Dashboard/dashboard.css
+++ b/codigo-fonte/src/Dashboard/dashboard.css
@@ -9,61 +9,61 @@
 
 body {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: white;
 }
 
 header{
     width: 100%;
-    height: fit-content;
+    height: max-content;
     background-color: #565656;
     display:flex;
-    padding: 10px;
-    justify-content: space-between;
     box-shadow: 0px 2px 0px #d0d7de;
-    align-items: start;
+    align-items: center;
     flex-wrap: wrap;
+    flex-basis: 100%;
+}
+
+.areamenu{
+    height: 55px;
 }
 
 .menu{
     list-style: none;
     display: flex;
     font-size: 14px;
-    text-align: center;;
+}
+
+.menu li{
+    height: 100%;
 }
 
 .menu li a{
+    height: 100%;
+    width: 100%;
     color:#020202;
-    display: block;
     text-decoration: none;
-    padding: 5px 20px 10px 20px;
-    border-radius: 10px;
-    margin-left: 10px;
 }
 
 .menu li a:hover{
     color:#fff;
     display: block;
     text-decoration: none;
-    margin-left: 10px;
     background-color: #333;
 }
 
 .logo{
-
     border-radius: 10px;
-    background-color: #c5c5c5;
 }
 
 .logo img{
     width: 50px;
-    height: 50px;
+    height: 100%;
 }
 .menu img{
     width: 40px;
-    height: 40px;
+    height: 100%;
     border-radius: 10px;
-    background-color: #c5c5c5;
 }
 
 .profile-picture{
@@ -127,16 +127,31 @@ header{
     font-size: small;
 }
 
+.areainfo input{
+    width: 60%;
+}
+
+.areainfo textarea{
+    width: 90%;
+
+}
+
+
 .fotodispositivo{
-    width: 120px;
-    height: 120px;
+    width: auto;
+    height: auto;
     border-radius: 10px;
-    display: inline-block;
+    display:inline-flex;
     grid-template-columns: 100%;
     align-content: center;
     justify-content: center;
     background-color: white;
     
+}
+
+.fotodispositivo img{
+    width: 100%;
+    height: 100%;
 }
 
 .areastatus{
@@ -166,7 +181,7 @@ input.status{
 }
 label{
     position: relative;
-    width: px;
+    width: 75px;
     height: 75px;
     border-radius: 10px;
 }
@@ -328,7 +343,55 @@ label input:checked ~ span{
     width: 5rem;
 }
 
-
+@media (max-width: 1060px){
+    input.status{
+        width: 100%;
+        height: 74px;
+        background-color: #d0d7de;
+        border-radius: 14px;
+        
+    }
+    label{
+        position: relative;
+        width: 75px;
+        height: 75px;
+        border-radius: 10px;
+    }
+    label span{
+        margin: auto;
+        position:-ms-page;
+        top: -60px;
+        left: 0;
+        width: 75px;
+        height: 75px;
+        background-color: white;
+        border: 6px solid black;
+        border-radius: 14px;
+        cursor: pointer;
+        transition: 0.5s;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    label span ion-icon {
+        color: red;
+        font-size: 1.5rem;
+        transition: 0.5s;
+    }
+    label input:checked ~ span ion-icon{
+        color: green;
+        filter: drop-shadow(0 0 5px #fff)
+                drop-shadow(0 0 15px #fff);
+    }
+    label input{
+        appearance: none;
+    
+    }
+    label input:checked ~ span{
+        right: 0;
+        left:auto;
+    }
+}
 
 
 
