--- a/codigo-fonte/variaveis.css
+++ b/codigo-fonte/variaveis.css
@@ -1,17 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Teachers:ital,wght@0,400..800;1,400..800&display=swap');
 
 :root{
     /*cores*/
     --fundo-principal: white;
-    --fundo-secundario: rgb(231, 226, 226);
-    --fundo-dispositivo: #c0c0c0;
+    --fundo-header: #565656;
+    --fundo-secundario: #d9dadb;
+    --fundo-terciario: #e7e2e2;
 
     /*fontes*/
 
-    --fonte-logo: "Quicksand", sans-serif;
-    --fonte-principal: "Roboto", sans-serif;
-    --fonte-secundaria: "Raleway", sans-serif;
+    --titulo: "Teachers", sans-serif;
+    --subtitulo: "Nunito Sans", sans-serif;
+    --paragrafo: "Open Sans", sans-serif;
 
     /*icones*/
 
