--- a/codigo-fonte/src/Planos/planos.css
+++ b/codigo-fonte/src/Planos/planos.css
@@ -7,11 +7,11 @@ body{
 
 header{
     width: 100%;
-    height: 70px;
+    height: 80px;
     background-color: #fffafa;
     display:flex;
     padding: 10px 0px 0px 0px;
-    justify-content: space-between;
+    justify-content: center;
     box-shadow: 0px 2px 0px #d0d7de;
     align-items: center;
     flex-wrap: wrap;
@@ -39,7 +39,7 @@ header{
     background-color: #333;
 }
 
-.logo{
+.Logo{
     width: 40px;
     height: 40px;
     border-radius: 10px;
@@ -48,8 +48,8 @@ header{
 }
 
 .logo img{
-    width: 50px;
-    height: 40px;
+    width: 100px;
+    height: 80px;
 }
 
 
