--- a/codigo-fonte/src/Planos/planos.css
+++ b/codigo-fonte/src/Planos/planos.css
@@ -3,40 +3,19 @@ body{
     background: white;
     color: #434343;
     margin: 0;
+    font-family: Arial, sans-serif;
 }
 
 header{
     width: 100%;
-    height: 80px;
-    background-color: #fffafa;
+    height: 90px;
+    background-color: #989fa7;
     display:flex;
     padding: 10px 0px 0px 0px;
     justify-content: center;
-    box-shadow: 0px 2px 0px #d0d7de;
+    box-shadow: 0px 2px 0px black;
     align-items: center;
     flex-wrap: wrap;
-}
-
-.menu{
-    list-style: none;
-    display: flex;
-}
-
-.menu li a{
-    color:#020202;
-    text-decoration: none;
-    padding: 10px 20px 10px 20px;
-    border-radius: 10px;
-    margin-left: 10px;
-    display:block;
-}
-
-.menu li a:hover{
-    color:#fff;
-    display: block;
-    text-decoration: none;
-    margin-left: 10px;
-    background-color: #333;
 }
 
 .Logo{
@@ -49,7 +28,7 @@ header{
 
 .logo img{
     width: 100px;
-    height: 80px;
+    height: 90px;
 }
 
 
