--- a/codigo-fonte/src/Dashboard/dashboard.css
+++ b/codigo-fonte/src/Dashboard/dashboard.css
@@ -4,19 +4,19 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'apple-system', sans-serif;
+    font-family:var(--paragrafo)
 }
 
 body {
     width: 100%;
     height: 100vh;
-    background-color: white;
+    background-color: var(--fundo-principal);
 }
 
 header{
     width: 100%;
     height: 50px;
-    background-color: #565656;
+    background-color: var(--fundo-header);
     display:flex;
     justify-content: space-between;
     box-shadow: 0px 2px 0px #d0d7de;
@@ -71,7 +71,7 @@ header img{
 
 .leftmenu{
     display: grid;
-    background-color: #d9dadb;
+    background-color: var(--fundo-secundario);
     width: 100%;
     height: 100%;
     border-right: 2px solid #989fa7;
@@ -109,6 +109,8 @@ header img{
     margin-top: 10px;
     margin-bottom: 5px;
     font-size: small;
+    font-family: var(--titulo);
+    font-size: large;
 }
 
 .areainfo input{
@@ -174,7 +176,7 @@ label span{
     top: -60px;
     left: 0;
     width: 75px;
-    height: 75px;
+    height: 80px;
     background-color: white;
     border: 6px solid black;
     border-radius: 14px;
