--- a/codigo-fonte/src/Planos/planos.css
+++ b/codigo-fonte/src/Planos/planos.css
@@ -57,13 +57,36 @@ header{
     align-items: center;
     text-align: center;
     background: rgb(199, 199, 199);
-    height: 455px;
-    width: 400px;
     padding: 0px 0px 0px 0px;
     box-shadow: 20px 20px  50px -30px black;
     border-radius: 12px;
     margin-bottom: 32px;
+    overflow: hidden;
+   
+    
 }
+
+#card2:hover{
+height: 520px;
+}
+#card3:hover{
+    height: 660px;
+    }
+#card1{
+    height: 405px;
+    width: 460px;
+}
+#card2{
+    height: 405px;
+    width: 450px;
+    transition: 0.9s;
+}
+#card3{
+    height: 405px;
+    width: 450px;
+    transition: 1.2s;
+}
+
 
 .icon{
     width: 64px;
@@ -80,14 +103,11 @@ header{
 }
 
 .card span {
-    font-weight: 300;
-    max-height: 240px;
-    margin-right: 0.5rem;
-    margin-left: 0.5rem;
-    margin-bottom: 16px;
+    
 }
 
 .saiba{
+    margin: 20px;
     padding: 0.3rem 0.7rem;
     text-transform: uppercase;
     border-radius: 32px;
@@ -99,6 +119,7 @@ header{
     font-weight: 455;
     background-color: #fff1ba;
 }
+
 
 .saiba:hover{
     background: linear-gradient(to right, #e6c619,#fff1ba);
@@ -117,4 +138,14 @@ details summary{
     padding-left: 1%;
     font-size: small;
     font-family: var(--paragrafo);
+}
+ol,ul{
+    line-height: 25px;
+    text-align: left;
+    padding: 0px 0px 0px 0px;
+}
+.imagens{
+    max-height: 26px;
+    max-width: 26px;
+    margin: 5px 5px 5px 5px;
 }
