--- a/codigo-fonte/src/Dashboard/modal-dispositivos.css
+++ b/codigo-fonte/src/Dashboard/modal-dispositivos.css
@@ -19,8 +19,11 @@
     margin: 15% auto;
     padding: 10px 20px;
     border: 1px solid #888;
-    width: 800px;
-    height: min-content;
+    width: fit-content;
+    height: fit-content;
+    min-width: 600px;
+    max-width: 1200px;
+
   
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     animation-name: animacao;
@@ -46,14 +49,24 @@
     font-weight: 400;
   }
   
-  td {
+  .celula-1,.celula-2 {
     text-align: left;
     color: #555;
     font-weight: 100;
     vertical-align: middle;
     padding: 0.75rem;
     border-top: 1px solid #DEE2E6;
-    width: 100%;
+    width: auto;
+  }
+
+  .celula-3{
+    text-align: left;
+    color: #555;
+    font-weight: 100;
+    vertical-align: middle;
+    padding: 0.75rem;
+    border-top: 1px solid #DEE2E6;
+
   }
   
   table #col_sel, table .selecao {
