botao apagar vermelho

--- a/codigo-fonte/variaveis.css
+++ b/codigo-fonte/variaveis.css
@@ -8,6 +8,8 @@
     --fundo-secundario: #d9dadb;
     --fundo-terciario: #e7e2e2;
 
+    --botao-apagar: #d02921;
+
     /*fontes*/
 
     --titulo: "Teachers", sans-serif;
